# myGraphicsHomework

./: .gitignore  CMakeLists.txt  README.md  cohenSutherland.cpp  cohenSutherland.tga  constant.cpp  constant.h  main.cpp  main.cxx  mvp.cpp  mvp.h
output/: chinaMap.tga
